# DevSweep

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/desktop/: package.json  tailwind.config.ts  tsconfig.json
apps/desktop/app/: globals.css  layout.tsx  page.tsx
apps/desktop/components/layout/: app-shell.tsx  logo.tsx
apps/desktop/components/ui/: button.tsx  card.tsx
apps/desktop/lib/: constants.ts  format.ts  tauri.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: cleanup.rs  history.rs  mod.rs  scan.rs  settings.rs  shell.rs  system.rs
apps/desktop/src-tauri/src/models/: cleanup.rs  history.rs  mod.rs  scan.rs  system.rs
apps/desktop/src-tauri/src/services/: cleaner.rs  commands_runner.rs  database.rs  mod.rs  scanner.rs  trash.rs
apps/desktop/src-tauri/src/utils/: mod.rs  paths.rs  safety.rs  size.rs
apps/desktop/stores/: app-store.ts  cleanup-store.ts  scan-store.ts
docs/: cleanup-rules.md  risk-levels.md  roadmap.md  safety.md
