[package]
name = "devsweep"
version = "0.1.0"
description = "Safe developer disk cleanup assistant"
authors = ["DevSweep"]
edition = "2021"

[lib]
name = "devsweep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
trash = "5"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
